fixed map is now visible on properties page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,6 +19,7 @@
 
 .wrapper {
   background-color: #fff;
+  display: grid;
 }
 
 a {
@@ -89,6 +90,7 @@ a {
   justify-content: center;
   align-items: flex-end;
 }
+
 
 .primaryText {
   color: #1f3e72;
